--- a/q/272452.html
+++ b/q/272452.html
@@ -26,14 +26,48 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>075</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
-<tr d-ix="1"><td>087</td><td>sed E</td><td>240410T105512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272470#272470">Philippo</a></td></tr>
-<tr d-ix="2"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>101</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
-<tr d-ix="4"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
-<tr d-ix="5"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
+<tr d-ix="0"><td>031</td><td>Charcoal</td><td>240410T112504Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272473#272473">Neil</a></td></tr>
+<tr d-ix="1"><td>075</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
+<tr d-ix="2"><td>087</td><td>sed E</td><td>240410T105512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272470#272470">Philippo</a></td></tr>
+<tr d-ix="3"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>101</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
+<tr d-ix="5"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
+<tr d-ix="6"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>APL+WIN, 75 bytes.</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
+<pre><code>ＥＮ∨ΣＥ⪪FiBu²×⁺λzz⌕Ｘ⁰⮌↨⊕ι⁺³⊗μ⁰Ｉ⊕ι
+</code></pre>
+<p><a href="https://tio.run/##XYtNCoMwFISvErJ6Qgqi3XVni@DCNtReIMYHDSRR8mPBy6fR7jqLGZiZT76Fk7PQKXGnbIBeLNDZJYZ7NCM6KBh5OBiiOZZh0SoAbVUTKSNVHl/KoAeuowfNCN02mstW2Qn4/Ml8ycgTV3QeoRHZOisdGrQBJ1D5epA1I7c5jjp3ptjFSPmLq/Dhj9l1Sak61@m06i8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code> Ｎ                              Input `n`
+Ｅ                               Map over implicit range
+      FiBu                      Literal string `FiBu`
+     ⪪    ²                     Split into pairs
+    Ｅ                           Map over pairs
+             λ                  Current pair
+            ⁺                   Concatenated with
+              zz                Literal string `zz`
+           ×                    Repeated by
+                ⌕               Index of
+                           ⁰    Literal integer `0` in
+                  ⁰             Literal integer `0`
+                 Ｘ              Vectorised raised to power
+                      ι         Outer value
+                     ⊕          Incremented
+                    ↨           Converted to base
+                          μ     Inner index
+                         ⊗      Doubled
+                       ⁺        Plus
+                        ³       Literal integer `3`
+                   ⮌            Reversed
+   Σ                            Concatenate the results
+  ∨                             Logical Or
+                              ι Current value
+                             ⊕  Incremented
+                            Ｉ   Cast to string
+                                Implicitly print
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>APL+WIN, 75 bytes.</h1>
 <p>Prompts for integer n</p>
 <pre><code>i←1⋄n←⎕⋄⍎∊n⍴⊂&quot;((0=⍴t)↑i),t←∊(∊+/0=1|i÷(⊂3 5)*¨⍳⌈i*.5)/&quot;Fizz&quot; &quot;Buzz&quot;⋄i←i+1⋄&quot;
 </code></pre>
@@ -50,7 +84,7 @@ FizzFizz
 Buzz
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 87 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 87 bytes</h1>
 <p>This one takes empty lines as input for the number of lines to output. It outputs numbers as unary (if not Fizz or Buzz):</p>
 <pre><code>G
 h
@@ -66,7 +100,7 @@ s/zx+/z/
 <p><a href="https://tio.run/##K05N0U3PK/3/350rg6tSPyZPv0Kfy8qQq1hfI66mSlOjQlszxijGSEU/xtAts6oqxkifq8SQy8oIVUG1SS1IhVMpVAVIuqpCW79K//9/LjTwL7@gJDM/r/i/risA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
 <p>It could be optimised down to <a href="https://#%20%5Bsed%5D,%2081%20bytes%20%20%20%20%20%20G%20%20%20%20%20h%20%20%20%20%20y/%5Cn/x/%20%20%20%20%20:1%20%20%20%20%20s/(%5E%7Cz)(x+)%5C2%5C2$/%5C1Fizz%5C2/%20%20%20%20%20s/(%5E%7Cz)(x+)%5C2%7B4%7D$/%5C1Buzz%5C2/%20%20%20%20%20t1%20%20%20%20%20s/zx+/z/%20%20%5BTry%20it%20online!%5D%5BTIO-lutoydo7%5D%20%20%5Bsed%5D:%20https://www.gnu.org/software/sed/%20%5BTIO-lutoydo7%5D:%20https://tio.run/##K05N0U3PK/3/350rg6tSPyZPv0Kfy8qQq1hfI66mSlOjQlszxijGSEU/xtAts6oqxkgfVarapBYk51QKkSsB6ayq0Nav0v//n4sU8C@/oCQzP6/4v64rAA" rel="nofollow noreferrer" title="sed – Try It Online">81 bytes</a>, if <code>FizzBuzzFizz</code> would be allowed for 45 and the like.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>27</s> 26 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>27</s> 26 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ENDÓ0Þ«2Lè”FizzÒÖ”#×JD?`þ,
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f1c/l8GSDw/MOrTbyObziUcNct8yqqsOTDk8DMpUPT/dysU84vE/n/38jAwMA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -99,7 +133,7 @@ s/zx+/z/
 <li>The <code>END...D?`þ,</code> is to print the number if the <code>J</code> results in an empty string <code>&quot;&quot;</code> and print the string otherwise. An alternative that's 1 byte shorter would be <code>EN...N‚éθ,</code> or <code>END...‚éθ,</code>, but unfortunately those are limited to <span class="math-container">\$n\leq1001\$</span> and <span class="math-container">\$n\leq10001\$</span> respectively.</li>
 </ol>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 101 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 101 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n and(f(n-1)or print(g(n,3)*'Fizz'+g(n,5)*'Buzz'or n))
 g=lambda i,d:0**(i%d)and-~g(i//d,d)
@@ -113,13 +147,13 @@ g=lambda i,d:0**(i%d)and-~g(i//d,d)
 </code></pre>
 <p><a href="https://tio.run/##LcyxCsIwEIDhvU9xi/QuRtpaXAJdHHwKl8iZeKDXEtqhHXz1mILjBz//tM6vUfschnt@@8@DPaiLqLYnU99k2@rjrkvRdSkaE2gVh38qll1rDMqBySufvhGladgy5bCXIArJa3xiZ89tR64CmJLoXJYQUInyDw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&amp;&amp;f(n-1)+(g=s=&gt;h=(d,q=n/d)=&gt;q%1?'':s+h(d,q/d),g`Fizz`(3)+g`Buzz`(5)||n)+`
 `
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWNwPTbPNs7fLU1NI08nQNNbU10m2Lbe0ybDVSdApt8_RTNG3tClUN7dXVrYq1M0CCQCGd9AS3zKqqBA1jTe30BKdSENNUs6YmT1M7gSsBYvBWruT8vOL8nFS9nPx0jTQNQwMDTU1riBzMcgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
 <pre><code>ƛ35fǑkF½*∑∴
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIsabMzVmx5FrRsK9KuKIkeKItCIsIiIsIjIwMCJd" rel="noreferrer">Try it Online!</a></p>
