--- a/q/272452.html
+++ b/q/272452.html
@@ -26,29 +26,44 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>109</td><td>R 4.1 and above</td><td>240410T113250Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272474#272474">Martin M</a></td></tr>
-<tr d-ix="1"><td>079</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
-<tr d-ix="2"><td>031</td><td>Charcoal</td><td>240410T112504Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272473#272473">Neil</a></td></tr>
-<tr d-ix="3"><td>087</td><td>sed E</td><td>240410T105512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272470#272470">Philippo</a></td></tr>
-<tr d-ix="4"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>101</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
+<tr d-ix="0"><td>099</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
+<tr d-ix="1"><td>109</td><td>R 4.1 and above</td><td>240410T113250Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272474#272474">Martin M</a></td></tr>
+<tr d-ix="2"><td>079</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
+<tr d-ix="3"><td>031</td><td>Charcoal</td><td>240410T112504Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272473#272473">Neil</a></td></tr>
+<tr d-ix="4"><td>087</td><td>sed E</td><td>240410T105512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272470#272470">Philippo</a></td></tr>
+<tr d-ix="5"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
 <tr d-ix="6"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
 <tr d-ix="7"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>R 4.1 and above, 109 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 99 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda n:n and[f(n-1),print(g(n,3)*'Fizz'+g(n,5)*'Buzz'or n)]
+g=lambda i,d:0**(i%d)and-~g(i//d,d)
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM/7/P802JzE3KSVRIc8qTyExLyU6TSNP11BTp6AoM69EI10jT8dYU0vdLbOqSl0bxDMF8pxKgbz8IoU8zViudJj@TJ0UKwMtLY1M1RRNoDm6dekamfr6KTopmv/TNIwMDDT/AwA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>-1 byte thanks to Mukundan314</p>
+<p>If we can just return the result for a single number:</p>
+<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 76 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda n:g(n,3)*'Fizz'+g(n,5)*'Buzz'or n
+g=lambda i,d:0**(i%d)and-~g(i//d,d)
+</code></pre>
+<p><a href="https://tio.run/##LcyxCsIwEIDhvU9xi/QuRtpaXAJdHHwKl8iZeKDXEtqhHXz1mILjBz//tM6vUfschnt@@8@DPaiLqLYnU99k2@rjrkvRdSkaE2gVh38qll1rDMqBySufvhGladgy5bCXIArJa3xiZ89tR64CmJLoXJYQUInyDw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>R 4.1 and above, 109 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>p=paste0;i=ifelse;a=\(x,y)i(x%%3,i(x%%5,y,p(&quot;Buzz&quot;,a(x/5,&quot;&quot;))),p(&quot;Fizz&quot;,a(x/3,&quot;&quot;)));cat(a(1:n,1:n),sep=&quot;\n&quot;)
 </code></pre>
 <p>The variable <code>n</code> holds the input.</p>
 <p><a href="https://www.jdoodle.com/ia/ZZ9" rel="nofollow noreferrer">Try it on JDroid</a>
 (TIO has old R version without support for lambdas)</p>
 </div>
-<div id="pu1" class="pu"><h1>APL+WIN, 79 bytes.</h1>
+<div id="pu2" class="pu"><h1>APL+WIN, 79 bytes.</h1>
 <p>Prompts for integer n</p>
 <pre><code>i←1⋄n←⎕⋄⍎∊n⍴⊂'((0=⍴t)↑i),t←∊(∊+/0=1|i÷(⊂3 5)*¨⍳⌈i*.5)/''Fizz'' ''Buzz''⋄i←i+1⋄'
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tfyaI@ai7JQ9IA6WArEe9fY86uvIe9W551NWkrqFhYAtklmg@apuYqalTAlLW0aUBxNr6BraGNZmHt2sA1RkrmGpqHVrxqHfzo56OTC09U019dXW3zKoqdXUFdXWnUhADaDbItkxtkH3q/4HWc/1P4zI0AAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
 <pre><code>ＥＮ∨ΣＥ⪪FiBu²×⁺λzz⌕Ｘ⁰⮌↨⊕ι⁺³⊗μ⁰Ｉ⊕ι
 </code></pre>
 <p><a href="https://tio.run/##XYtNCoMwFISvErJ6Qgqi3XVni@DCNtReIMYHDSRR8mPBy6fR7jqLGZiZT76Fk7PQKXGnbIBeLNDZJYZ7NCM6KBh5OBiiOZZh0SoAbVUTKSNVHl/KoAeuowfNCN02mstW2Qn4/Ml8ycgTV3QeoRHZOisdGrQBJ1D5epA1I7c5jjp3ptjFSPmLq/Dhj9l1Sak61@m06i8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -81,7 +96,7 @@
                                 Implicitly print
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 87 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 87 bytes</h1>
 <p>This one takes empty lines as input for the number of lines to output. It outputs numbers as unary (if not Fizz or Buzz):</p>
 <pre><code>G
 h
@@ -97,7 +112,7 @@ s/zx+/z/
 <p><a href="https://tio.run/##K05N0U3PK/3/350rg6tSPyZPv0Kfy8qQq1hfI66mSlOjQlszxijGSEU/xtAts6oqxkifq8SQy8oIVUG1SS1IhVMpVAVIuqpCW79K//9/LjTwL7@gJDM/r/i/risA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
 <p>It could be optimised down to <a href="https://#%20%5Bsed%5D,%2081%20bytes%20%20%20%20%20%20G%20%20%20%20%20h%20%20%20%20%20y/%5Cn/x/%20%20%20%20%20:1%20%20%20%20%20s/(%5E%7Cz)(x+)%5C2%5C2$/%5C1Fizz%5C2/%20%20%20%20%20s/(%5E%7Cz)(x+)%5C2%7B4%7D$/%5C1Buzz%5C2/%20%20%20%20%20t1%20%20%20%20%20s/zx+/z/%20%20%5BTry%20it%20online!%5D%5BTIO-lutoydo7%5D%20%20%5Bsed%5D:%20https://www.gnu.org/software/sed/%20%5BTIO-lutoydo7%5D:%20https://tio.run/##K05N0U3PK/3/350rg6tSPyZPv0Kfy8qQq1hfI66mSlOjQlszxijGSEU/xtAts6oqxkgfVarapBYk51QKkSsB6ayq0Nav0v//n4sU8C@/oCQzP6/4v64rAA" rel="nofollow noreferrer" title="sed – Try It Online">81 bytes</a>, if <code>FizzBuzzFizz</code> would be allowed for 45 and the like.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>27</s> 26 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>27</s> 26 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ENDÓ0Þ«2Lè”FizzÒÖ”#×JD?`þ,
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f1c/l8GSDw/MOrTbyObziUcNct8yqqsOTDk8DMpUPT/dysU84vE/n/38jAwMA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -129,20 +144,6 @@ s/zx+/z/
 <li>The <code>0Þ«</code> is necessary because 05AB1E has modular indexing. So for the lists with only a single or two items instead of <span class="math-container">\$\geq3\$</span>, it would incorrectly retrieve that single or first item when indexing with the modular 0-based <span class="math-container">\$1\$</span> or <span class="math-container">\$2\$</span>.</li>
 <li>The <code>END...D?`þ,</code> is to print the number if the <code>J</code> results in an empty string <code>&quot;&quot;</code> and print the string otherwise. An alternative that's 1 byte shorter would be <code>EN...N‚éθ,</code> or <code>END...‚éθ,</code>, but unfortunately those are limited to <span class="math-container">\$n\leq1001\$</span> and <span class="math-container">\$n\leq10001\$</span> respectively.</li>
 </ol>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 101 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>f=lambda n:n and(f(n-1)or print(g(n,3)*'Fizz'+g(n,5)*'Buzz'or n))
-g=lambda i,d:0**(i%d)and-~g(i//d,d)
-</code></pre>
-<p><a href="https://tio.run/##K6gsycjPM/7/P802JzE3KSVRIc8qTyExL0UjTSNP11Azv0ihoCgzr0QjXSNPx1hTS90ts6pKXRvEMwXynEqBPKCaPE1NrnSYCZk6KVYGWloamaopmkCTdOvSNTL19VN0UjT/p2kYGRho/gcA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>If we can just return the result for a single number:</p>
-<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 76 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda n:g(n,3)*'Fizz'+g(n,5)*'Buzz'or n
-g=lambda i,d:0**(i%d)and-~g(i//d,d)
-</code></pre>
-<p><a href="https://tio.run/##LcyxCsIwEIDhvU9xi/QuRtpaXAJdHHwKl8iZeKDXEtqhHXz1mILjBz//tM6vUfschnt@@8@DPaiLqLYnU99k2@rjrkvRdSkaE2gVh38qll1rDMqBySufvhGladgy5bCXIArJa3xiZ89tR64CmJLoXJYQUInyDw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&amp;&amp;f(n-1)+(g=s=&gt;h=(d,q=n/d)=&gt;q%1?'':s+h(d,q/d),g`Fizz`(3)+g`Buzz`(5)||n)+`
