--- a/q/272546.html
+++ b/q/272546.html
@@ -26,11 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>Vyxal 3</td><td>240413T205045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272550#272550">math sca</a></td></tr>
-<tr d-ix="1"><td>065</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
-<tr d-ix="2"><td>036</td><td>Charcoal</td><td>240413T201407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272549#272549">Neil</a></td></tr>
+<tr d-ix="0"><td>009</td><td>Jelly</td><td>240413T191502Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272547#272547">Jonathan</a></td></tr>
+<tr d-ix="1"><td>011</td><td>Vyxal 3</td><td>240413T205045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272550#272550">math sca</a></td></tr>
+<tr d-ix="2"><td>065</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
+<tr d-ix="3"><td>036</td><td>Charcoal</td><td>240413T201407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272549#272549">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 bytes</h1>
+<pre><code>ọⱮ3IṪ3ḍµ#
+</code></pre>
+<p>A full program that accepts a number, <span class="math-container">\$n\$</span>, from stdin and prints a Jelly representation of a list of the first <span class="math-container">\$n\$</span> numbers for which the difference in its order of two and three differ by a multiple of three (<a href="https://codegolf.stackexchange.com/a/272549/53748">Neil's discovery</a>).</p>
+<p><strong><a href="https://tio.run/##AR0A4v9qZWxsef//4buN4rGuM0nhuaoz4biNwrUj//8zMg" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 11 bytes</h1>
 <pre><code>ÞṆΩ2Mn3M-3Ḋ
 </code></pre>
 <p>Outputs <a href="https://oeis.org/A339746" rel="nofollow noreferrer">A339746</a> as an infinite sequence.</p>
@@ -44,7 +51,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 65 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 65 bytes</h1>
 <pre><code>a=i,=0,
 while 1:
  while i in a:i+=1
@@ -54,7 +61,7 @@ while 1:
 <p>This is <a href="https://oeis.org/A339746" rel="nofollow noreferrer">A339746</a>, same as <a href="https://codegolf.stackexchange.com/a/272549">Neil's answer</a>.</p>
 <p><a href="https://chat.stackexchange.com/transcript/message/65499090#65499090">Method found by math scat</a> as a simple fix for my initial idea (which they also thought of independently).</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 36 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 36 bytes</h1>
 <pre><code>Ｎθ≔⁰ηＷ‹ⅉθ«≦⊕η¿¬﹪↨Ｅ23⌕Ｘ⁰⮌↨ηＩκ⁰±¹¦³⟦Ｉη
 </code></pre>
 <p><a href="https://tio.run/##LY3BCsIwDIbP7imCpxQqTHf0pIIwcEO8iXioW1yLs51t5w7is9dOzSHkT77wVVLYyog2hFx3vS/7@4UsPtgyWTmnGo0pBxnTIFVLgDtyDo/IODwYg1cyKUT3B3NdWbqT9lT/XibqClgaj4Wp@9bgWjjCyON0kU05bJWucW@GqIuOAz3JxvsXkhw2wnm8sVgc0rGV1AhPOB/nLK5hb5X2ePqCkp2j8B3CPE3D7Nl@AA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
