--- a/q/272546.html
+++ b/q/272546.html
@@ -38,7 +38,7 @@
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNEts/j/Py2/SCPT1tA63Tbb1i5TNdvewMpQO10jWytD0zpTW1tTI10jw9ZIUxdEGWtqqhrX1BQUZeaVaGRq/v8PAA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>Same theory Neil's solution though found independently</p>
-<p>Port of Pxeger's solution is <a href="https://tio.run/##y0osSyxOLsosKNEts/j/Py2/SCPTttg22iDW2lpTsThaWzsz1r44OlPLKNYWRBlDKBMIZRlrq1hQlJlXopGpaWXw/z8A" rel="nofollow noreferrer">longer</a></p>
+<p>Port of Pxeger's solution is <a href="https://tio.run/##y0osSyxOLsosKNEts/j/Py2/SCPTttg22iDW2lpTsThaWzsz1j7aSMdYx0THMlYvN7FAo8LWrji6Qisz1tZQp6AoM69EI1NT08rg/38A" rel="nofollow noreferrer">same length</a></p>
 <hr />
 <p>For cardinality thing, obviously 1 can be chosen or unchosen, 5 can, 5<sup>2</sup> can...; = 2<sup>N</sup></p>
 <p>For density thing, <a href="https://tio.run/##FcxBCoAgEADA1wS7bZHlJZKtt0SQbkKFiSf/bnWa2xxrWp8tyB3bNJaynZGV2a8Awr2x7HmWyi9q6smCrx0aIUKw4HjA9kcjVjrnO8gZQRqir@gES3kB" rel="nofollow noreferrer">this solution goes to 0.472</a>, which I'd say far enough to reject 1/3 assumption</p>
