--- a/q/272546.html
+++ b/q/272546.html
@@ -26,13 +26,40 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>059</td><td>JavaScript V8</td><td>240413T224340Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272552#272552">l4m2</a></td></tr>
-<tr d-ix="1"><td>009</td><td>Jelly</td><td>240413T191502Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272547#272547">Jonathan</a></td></tr>
-<tr d-ix="2"><td>011</td><td>Vyxal 3</td><td>240413T205045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272550#272550">math sca</a></td></tr>
-<tr d-ix="3"><td>065</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
-<tr d-ix="4"><td>036</td><td>Charcoal</td><td>240413T201407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272549#272549">Neil</a></td></tr>
+<tr d-ix="0"><td>036</td><td>Charcoal</td><td>240413T201407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272549#272549">Neil</a></td></tr>
+<tr d-ix="1"><td>059</td><td>JavaScript V8</td><td>240413T224340Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272552#272552">l4m2</a></td></tr>
+<tr d-ix="2"><td>009</td><td>Jelly</td><td>240413T191502Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272547#272547">Jonathan</a></td></tr>
+<tr d-ix="3"><td>011</td><td>Vyxal 3</td><td>240413T205045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272550#272550">math sca</a></td></tr>
+<tr d-ix="4"><td>065</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 59 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 36 bytes</h1>
+<pre><code>Ｎθ≔⁰ηＷ‹ⅉθ«≦⊕η¿¬﹪↨Ｅ23⌕Ｘ⁰⮌↨ηＩκ⁰±¹¦³⟦Ｉη
+</code></pre>
+<p><a href="https://tio.run/##LY3BCsIwDIbP7imCpxQqTHf0pIIwcEO8iXioW1yLs51t5w7is9dOzSHkT77wVVLYyog2hFx3vS/7@4UsPtgyWTmnGo0pBxnTIFVLgDtyDo/IODwYg1cyKUT3B3NdWbqT9lT/XibqClgaj4Wp@9bgWjjCyON0kU05bJWucW@GqIuOAz3JxvsXkhw2wnm8sVgc0rGV1AhPOB/nLK5hb5X2ePqCkp2j8B3CPE3D7Nl@AA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>Ｎθ≔⁰ηＷ‹ⅉθ«≦⊕η
+</code></pre>
+<p>Input <code>n</code> and count up until <code>n</code> numbers have been output.</p>
+<pre><code>¿¬﹪↨Ｅ23⌕Ｘ⁰⮌↨ηＩκ⁰±¹¦³⟦Ｉη
+</code></pre>
+<p>If the exponents of <code>2</code> and <code>3</code> in the current value's factorisation differ by a multiple of <code>3</code> then output the current value on its own line.</p>
+<p>A port of @pxeger's Python answer is only 32 bytes:</p>
+<pre><code>Ｎθ≔¹ηＷ‹ⅉθ«Ｗ№υη≦⊕ηＦ12349⊞υ×ηＩκ⟦Ｉη
+</code></pre>
+<p><a href="https://tio.run/##LYy9DoIwFEZneIobpnsTTEBdjJNhIlHD4GKMQ8VqG0uB/uhgfPYKyvidfOfUgpm6ZSqEUnfe7X1z4QZ7Wscba@VdY56CGNZLSMUBt9xaPCKl0BPBO44mXrReO/Tjl2DHukkudW14w7Xj138murUGMMnni@UqIai8FaN1kA23KFIomHX4IBqvlZFD8/RDgs4D@oSQZ1mYPdUX" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>Ｎθ≔¹ηＷ‹ⅉθ«
+</code></pre>
+<p>Input <code>n</code> and count up until <code>n</code> numbers have been output.</p>
+<pre><code>Ｗ№υη≦⊕η
+</code></pre>
+<p>Skip over numbers in the skip list.</p>
+<pre><code>Ｆ12349⊞υ×ηＩκ
+</code></pre>
+<p>Add the five multiples to the skip list (which will also cause the current value to be &quot;skipped&quot; on the next pass).</p>
+<pre><code>⟦Ｉη
+</code></pre>
+<p>Output the current value on its own line.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 59 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(i=1;g=k=&gt;i%k?0:1+g(k*h);i++)(g(h=2)-g(h=3))%3||print(i)
 </code></pre>
@@ -43,7 +70,7 @@
 <p>For cardinality thing, obviously 1 can be chosen or unchosen, 5 can, 5<sup>2</sup> can...; = 2<sup>N</sup></p>
 <p>For density thing, <a href="https://tio.run/##FcxBCoAgEADA1wS7bZHlJZKtt0SQbkKFiSf/bnWa2xxrWp8tyB3bNJaynZGV2a8Awr2x7HmWyi9q6smCrx0aIUKw4HjA9kcjVjrnO8gZQRqir@gES3kB" rel="nofollow noreferrer">this solution goes to 0.472</a>, which I'd say far enough to reject 1/3 assumption</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 bytes</h1>
 <pre><code>ọⱮ3IṪ3ḍµ#
 </code></pre>
 <p>A full program that accepts a number, <span class="math-container">\$n\$</span>, from stdin and prints a Jelly representation of a list of the first <span class="math-container">\$n\$</span> natural numbers for which the difference in its order of two and three differ by a multiple of three (<a href="https://codegolf.stackexchange.com/a/272549/53748">Neil's discovery</a>).</p>
@@ -59,7 +86,7 @@
           - implicit print
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 11 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 11 bytes</h1>
 <pre><code>ÞṆΩ2Mn3M-3Ḋ
 </code></pre>
 <p>Outputs <a href="https://oeis.org/A339746" rel="nofollow noreferrer">A339746</a> as an infinite sequence.</p>
@@ -73,7 +100,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 65 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 65 bytes</h1>
 <pre><code>a=i,=0,
 while 1:
  while i in a:i+=1
@@ -82,17 +109,6 @@ while 1:
 <p><a href="https://ato.pxeger.com/run?1=m7O8oLIkIz_PaL--Y4i_fkpqWmJpTkl8UWleXmqRQo1CRmpiioKuoYHBgqWlJWm6FjcdE20zdWwNdLjKMzJzUhUMrbgUIKxMhcw8hUSrTG1bQy6FgqLMvBKFTOtEbaDqTC0jIDYGYhMgtoQYBDVvAZSGkAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>This is <a href="https://oeis.org/A339746" rel="nofollow noreferrer">A339746</a>, same as <a href="https://codegolf.stackexchange.com/a/272549">Neil's answer</a>.</p>
 <p><a href="https://chat.stackexchange.com/transcript/message/65499090#65499090">Method found by math scat</a> as a simple fix for my initial idea (which they also thought of independently).</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 36 bytes</h1>
-<pre><code>Ｎθ≔⁰ηＷ‹ⅉθ«≦⊕η¿¬﹪↨Ｅ23⌕Ｘ⁰⮌↨ηＩκ⁰±¹¦³⟦Ｉη
-</code></pre>
-<p><a href="https://tio.run/##LY3BCsIwDIbP7imCpxQqTHf0pIIwcEO8iXioW1yLs51t5w7is9dOzSHkT77wVVLYyog2hFx3vS/7@4UsPtgyWTmnGo0pBxnTIFVLgDtyDo/IODwYg1cyKUT3B3NdWbqT9lT/XibqClgaj4Wp@9bgWjjCyON0kU05bJWucW@GqIuOAz3JxvsXkhw2wnm8sVgc0rGV1AhPOB/nLK5hb5X2ePqCkp2j8B3CPE3D7Nl@AA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
-<pre><code>Ｎθ≔⁰ηＷ‹ⅉθ«≦⊕η
-</code></pre>
-<p>Input <code>n</code> and count up until <code>n</code> numbers have been output.</p>
-<pre><code>¿¬﹪↨Ｅ23⌕Ｘ⁰⮌↨ηＩκ⁰±¹¦³⟦Ｉη
-</code></pre>
-<p>If the exponents of <code>2</code> and <code>3</code> in the current value's factorisation differ by a multiple of <code>3</code> then output the current value on its own line.</p>
 </div>
 
 <table id="st">
