--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/272560.html">Output a 1-2-3-5-7... sequence                  : 0272560</a>
 <a href="q/272523.html">Maximum number of trailing zeros                : 0272523</a>
 <a href="q/272546.html">Output a 1-2-3 sequence                         : 0272546</a>
 <a href="q/171168.html">Without using numbers get the highest salary you: 0171168</a>
