--- a/q/272560.html
+++ b/q/272560.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>095</td><td>JavaScript V8</td><td>240414T074951Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272561#272561">l4m2</a></td></tr>
+<tr d-ix="0"><td>091</td><td>JavaScript V8</td><td>240414T074951Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272561#272561">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 95 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 91 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>for(i=0,g=x=&gt;x%k?k&lt;i&amp;&amp;g(x,i%k++||++g[i],k in g||[z=(z&lt;1)-z]):z+g(x/k);k=2,z=1;)g(++i)||print(i)
+<pre class="lang-javascript prettyprint-override"><code>for(i=0,g=x=&gt;x%k?k&lt;i&amp;&amp;g(x,g[-i%k++||i]=z+=!g[k]):(z/2^-z%2)+g(x/k);k=2;z=1)g(++i)||print(i)
 </code></pre>
-<p><a href="https://tio.run/##DcpBCoNADADAr3hRNmTF2lOppj5EPEihIQ1Y2YosIX/fds7zXs/1@0yyH@15K@X1SUHoEpkyPXKtk47SNBxylFoR3RF5liVqJVvF7rNRsLGH1ha4G/5jpzAoXaNRPwAHRAH3Pcl2BIFSfg" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##DcpRCsIwDADQs/jRkZCVab/ELe4gY8IQDDGgo45RSu/e@b7fe9mX3zPquvn9WuvrG0H53Aonvidnow3aNAKplcmrM6JSdOZMfJLJZrxB7sLDZxeQ/qsz7I1Dn/mCAkSKpaxRPxso1noA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>att's method</p>
 </div>
 
